--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js start"
   },
   "keywords": [],
   "author": "adanjz <adanzweig@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.6.7",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
+    "nodemon": "^3.1.0",
     "spotify-web-api-node": "^5.0.2"
   }
 }
