--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
+    "node-fetch": "^2.7.0",
     "nodemon": "^3.1.0",
+    "openai": "^4.0.0",
     "spotify-web-api-node": "^5.0.2"
   }
 }
